force-app/main/default/objects/QlikConfig__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Auth0 Client ID</label>
    <type>Text</type>
    <length>255</length>
    <description>Auth0 Client ID for OAuth2 authentication</description>
</CustomField>