force-app/main/default/objects/QlikConfig__mdt/fields/DefaultAppId__c.field-meta.xml
<CustomField>
    <fullName>DefaultAppId__c</fullName>
    <label>Default App ID</label>
    <type>Text</type>
    <length>255</length>
    <description>Default Qlik application ID</description>
</CustomField>