force-app/main/default/objects/QlikConfig__mdt/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Qlik Host</label>
    <type>Url</type>
    <required>true</required>
    <description>Qlik Cloud tenant URL (e.g., https://YOUR_TENANT.qlikcloud.com)</description>
</CustomField>