force-app/main/default/objects/QlikConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates if this configuration is active</description>
</CustomField>