force-app/main/default/objects/QlikConfig__mdt/fields/RedirectUri__c.field-meta.xml
<CustomField>
    <fullName>RedirectUri__c</fullName>
    <label>OAuth Redirect URI</label>
    <type>Url</type>
    <description>OAuth2 redirect URI for Auth0 authentication</description>
</CustomField>