force-app/main/default/objects/QlikConfig__mdt/fields/WebIntegrationId__c.field-meta.xml
<CustomField>
    <fullName>WebIntegrationId__c</fullName>
    <label>Web Integration ID</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Qlik Web Integration ID for authentication</description>
</CustomField>